[package]
name = "stoream-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tokio"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
colog = { git="https://github.com/X-FRI/rust-colog" }
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"
md5 = "0.7.0"
tower-http = { version = "0.5.2", features = ["cors"] }

[profile.release]
strip = true
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"